2007-02-22  sobukus@users.sourceforge.net

	* m4/apha.m4: Fix syntax of configuration test for gcc on alpha

2007-02-21  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/faq-ja.tex: Sync Japanese documentation
	to current version.

2007-02-18  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/pm3d.c (pm3d_plot): Use the z-averaging also for flushed
	triangles.

2007-02-17  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Updates in dgrid3d and contours sections.

2007-02-13  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary): Do not apply log scale range checks to
	colorbar and palette unless these really are used in the plot.
	Bug #1659059

	* docs/gnuplot.doc docs/gnuplot-ja.doc: Clarify the section on
	'set log', and remove an empty entry point for 'set log cb'.

2007-02-11  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c (pause_command): On Windows, cannot wait for Enter
	in "pause -1" in a non-interactive session without the graph window.

2007-02-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c (pause_command): On Windows, wait for Enter in console
	instead for a mouse click in a special window if the graph window is
	not (yet) present.

2007-02-09  Ethan Merritt  <merritt@u.washington.edu>

	* term/README: Fix confusing typo in TERM_TABLE layout description.

2007-02-10  Petr Mikulik  <mikulik@physics.muni.cz>

	SF #1651350 win terminal: pause mouse key|any does not work

	* src/mouse.c (event_keypress): Kill pending Pause dialog.

	* src/win/wpause.c (PauseBox): Don't show "OK CANCEL" dialog when
	pausing for mouse.

2007-02-09  Daniel Sebald  <daniel.sebald@ieee.org>

	* term/pdf.trm (PDF_point): Point type 1 was incorrectly drawn as a dot.
	Bug #1656433

2007-02-10  Juergen Wieferink  <wieferink@freenet.de>

	* src/plot.c (main): Flag 'interactive' not reset to FALSE after running
	command "gnuplot - nonExistingScript.gp". On some platforms, gnuplot