@@ -1,3 +1,11 @@
+2007-02-25  Petr Mikulik  <mikulik@physics.muni.cz>
+
+	* src/color.c (draw_color_smooth_box) src/plot3d.c (eval_3dplots):
+	Call setup_tics(COLOR_AXIS, 20) at the same place as setup_tics(...)
+	for all other axes. Until now it was called much later during color box
+	drawing where it could change the colour axis min or max by rounding it
+	to lower/upper tics step.
+
 2007-02-22  sobukus@users.sourceforge.net
 
 	* m4/apha.m4: Fix syntax of configuration test for gcc on alpha
